default/objects/Customer_Visit__c/Customer_Visit__c.object-meta.xml
<CustomObject>
    <description>Ability to track customer interactions</description>
    <label>Customer Visit</label>
    <nameField>
        <label>Interaction Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Visits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>