default/objects/Customer_Visit__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Visits</relationshipLabel>
    <relationshipName>Customer_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>