default/objects/Customer_Visit__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>