default/objects/Customer_Visit__c/fields/Form_A_Details_Revision__c.field-meta.xml
<CustomField>
    <fullName>Form_A_Details_Revision__c</fullName>
    <label>Form A Details Revision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>