default/objects/Customer_Visit__c/fields/Inquired_For__c.field-meta.xml
<CustomField>
    <fullName>Inquired_For__c</fullName>
    <label>Inquired For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TL</fullName>
            </value>
            <value>
                <fullName>Loom</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>