default/objects/Customer_Visit__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Customer Visits</relationshipLabel>
    <relationshipName>Customer_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>