default/objects/Customer_Visit__c/fields/Medium_Of_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Medium_Of_Interaction__c</fullName>
    <label>Medium Of Interaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>VC</fullName>
            </value>
            <value>
                <fullName>Physical Visit</fullName>
            </value>
            <value>
                <fullName>Physical Visit(LeadSource)</fullName>
                <isActive>false</isActive>
                <label>Physical Visit(LeadSource)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>