default/objects/Customer_Visit__c/fields/Objective_Of_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Objective_Of_Interaction__c</fullName>
    <label>Objective Of Interaction</label>
    <type>TextArea</type>
</CustomField>