default/objects/Customer_Visit__c/fields/Other_Venue__c.field-meta.xml
<CustomField>
    <fullName>Other_Venue__c</fullName>
    <label>Other Venue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>