default/objects/Customer_Visit__c/fields/Persons_Met__c.field-meta.xml
<CustomField>
    <fullName>Persons_Met__c</fullName>
    <label>Persons Met</label>
    <length>255</length>
    <type>Text</type>
</CustomField>