default/objects/Customer_Visit__c/fields/Spares_And_Service_Issue__c.field-meta.xml
<CustomField>
    <fullName>Spares_And_Service_Issue__c</fullName>
    <label>Spares And Service Issue</label>
    <type>TextArea</type>
</CustomField>