default/objects/Customer_Visit__c/fields/Summary_to_be_Shared__c.field-meta.xml
<CustomField>
    <fullName>Summary_to_be_Shared__c</fullName>
    <label>Summary to be Shared With Management</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>